Update dependencies and move gc logging options to dev profile